--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<article style="font-family: Lato, sans-serif; font-Weight: 400; font-size: 16px; color:#4a474b;">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ADAM BEN AHMED</title>
+</head>
+<body style="background-color: #f5f5f5;">
     <img width="200" src="https://zupimages.net/up/24/40/4vyc.jpg">
     <p style="font-size:large; font-Weight: 700;">
     <b>ADAM BEN AHMED</b>
@@ -23,4 +31,10 @@
     En <b style="color:#009">ao&ucirc;t 2024</b>, il organise pour le compte de l'<b style="color:#0077dd">AJST</b>, la &#171 <b style="color:#006699">Nuit des &eacute;toiles 2024</b> &#187 &agrave; Tunis en collaboration avec la <b style="color:#0077dd">SAT</b>.<br/>
     En <b style="color:#009">septembre 2024</b>, il r&eacute;int&egrave;gre la <b style="color:#0077dd">Soci&eacute;t&eacute; Astronomique de Tunisie</b>.<br/><br/><br/>
     </p>
+</body>
+
+
+
+<article style="font-family: Lato, sans-serif; font-Weight: 400; font-size: 16px; color:#4a474b;">
+
 </article>
